// -*- mode:dbml; -*-
// PRAGMA foreign_keys=ON; PRAGMA journal_mode=WAL; PRAGMA synchronous=NORMAL;

Project cli_feed_index_v2 {
    database_type: 'SQLite'
    Note: '''
    - Subscription source-of-truth is external config (yaml/toml/etc).
    - DB stores feeds only to attribute entries (provenance), not to manage subscription.
    - JSON1 is assumed (meta columns are JSON text).
    '''
}

Table es_meta {
    Note: '''
    Single-row meta as JSON for application-owned runtime status.
    Keep it boring and reliable.
    '''
    id integer [pk] // always 1 (enforce in app)
    meta_json text [not null] // JSON object for application-owned runtime status metadata
    indexes { (id) }
}

Table feeds {
    Note: '''
    Feed catalog for provenance/attribution.
    Not a "subscription list".
    '''
    id integer [pk, increment]
    feed_id text [not null, unique] // non-empty app-defined stable id (e.g., normalized URL or hash)
    url text [not null]              // non-empty fetch/canonical URL you want to show as source
    title text
    author text
    site_url text
    meta_json text                   // JSON object (image, language, generator, raw headers, etc)

    created_at integer [not null]    // unix epoch sec: first time seen via any entry
    updated_at integer               // last time feed metadata changed (optional)

}

Table entries {
    Note: '''
    Entry index. entry_id is app-defined stable id.
    - published_at can be NULL; use first_seen_at as a stable timeline fallback.
    '''
    id integer [pk, increment]
    entry_id text [not null, unique]  // non-empty app-defined stable id derived from canonical source identity
    feed_pk integer [not null]

    link text                          // may be null in some feeds
    title text                         // allow null: some items are sparse
    author text

    published_at integer               // unix epoch sec (nullable)
    updated_at integer                 // unix epoch sec (nullable; Atom updated, etc)

    first_seen_at integer [not null]   // unix epoch sec: when inserted/first observed locally

    meta_json text                     // JSON object (categories, flags, source fields, etc)

    indexes {
        (feed_pk, published_at)
        (feed_pk, `COALESCE(published_at, updated_at, first_seen_at)`, id)
        (feed_pk, first_seen_at)

        (published_at)
        (`COALESCE(published_at, updated_at, first_seen_at)`, id)
        (first_seen_at)
    }
}

Table entry_enclosures {
    Note: "enclosure table (member of entry)"
    id integer [pk, increment]
    entry_pk integer [not null]
    url text [not null]
    mime_type text
    length integer                     // was text -> integer

    indexes {
        (entry_pk, url) [unique]
    }
}

Table entry_contents {
    Note: '''
    1:1 content storage.
    DB is not obligated to store full content; it may store content in SQLite or refer to a hash-addressed file store.
    '''
    entry_pk integer [pk]              // also FK to entries.id
    storage text [not null]            // 'none' | 'db' | 'fs' (enforced in DB)
    ref text                           // hash key (e.g. sha256 hex) when storage='fs' (nullable)
    content_type text                  // 'text/html', 'text/plain', ...
    content text                       // only when storage='db'

    indexes { (ref) }
}

Table entry_tags {
    Note: '''
    Junction table. Implemented as WITHOUT ROWID in SQLite for size/write efficiency.
    '''
    entry_pk integer [not null]
    tag_id integer [not null]

    primary key (entry_pk, tag_id)
    indexes {
        (tag_id, entry_pk)
    }
}

Table tags {
    Note: '''
    Tag dictionary.
    Tagging is treated as entry state (user tags + auto tags applied at ingest time).
    This table may be derived/rebuilt from entry_tags, but entry_tags is the source of truth for assignments.
    '''
    id integer [pk, increment]
    name text [unique, not null] // non-empty
}

Ref: feeds.id > entries.feed_pk [delete: restrict]
Ref: entries.id > entry_contents.entry_pk [delete: cascade]
Ref: entries.id > entry_enclosures.entry_pk [delete: cascade]
Ref: entries.id > entry_tags.entry_pk [delete: cascade]
Ref: tags.id > entry_tags.tag_id [delete: cascade]
